# library_django

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  library API.yaml  pyproject.toml  pytests.ini
library_django/: celery.py  settings.py  urls.py
tests/: author_test.py  book_test.py
users/: managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py
